hotfix: change font on span

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -18,6 +18,9 @@ span {
   font-family: 'Pirata One', sans-serif;
 }
 
+.price {
+  font-family: 'Plus Jakarta Sans Bold', sans-serif;
+}
 .green {
   background-color: #b8ff5f;
 }
